--- a/inst/tutorials/tidyeval/tidyeval.html
+++ b/inst/tutorials/tidyeval/tidyeval.html
@@ -111,8 +111,8 @@ if (window.hljs) {
 <h2>Introductions</h2>
 <div id="section-introduction-second-edition-2021" class="section level3">
 <h3>Introduction: second edition (2021)</h3>
-<p>Since I first put this tutorial together, the Tidyverse team have come out with great presentations that made tidy evaluation easier to understand. My goal in the second edition of this tutorial build on the Tidyverse folks’ practical advice.</p>
-<p>At rstudio::conf(2019), Jenny Bryan and Lionel Henry gave consecutive talks. Jenny set up the problem by asking the question “do you <em>really need</em> tidy evaluation?”, then showing some cases where you can use straightforward techniques to avoid using it:</p>
+<p>Since I first put this tutorial together, the Tidyverse team have come out with great presentations that make tidy evaluation easier to understand. My goal in the second edition of this tutorial is to build on the Tidyverse folks’ practical advice.</p>
+<p>At rstudio::conf(2019), Jenny Bryan and Lionel Henry gave consecutive talks. Jenny set up the problem by asking the question “do you <em>really need</em> tidy evaluation?”, then showed some cases where you can use straightforward techniques to avoid using it:</p>
 <div class="vembedr" align="center">
 <div>
 <iframe src="https://www.youtube.com/embed/2BXPLnLMTYo" width="533" height="300" frameborder="0" allowfullscreen=""></iframe>
@@ -123,33 +123,33 @@ if (window.hljs) {
 <li>you are writing functions.</li>
 <li>such a function does not simply pass these arguments <strong>undisturbed</strong> to a Tidyverse function.</li>
 </ul>
-<p>Lionel then talked about how to think about tidy evaluation, in case you need to use it:</p>
+<p>Lionel then gave more details on tidy evaluation, in case you <em>do</em> need it:</p>
 <div class="vembedr" align="center">
 <div>
 <iframe src="https://www.youtube.com/embed/2-gknoyjL3A" width="533" height="300" frameborder="0" allowfullscreen=""></iframe>
 </div>
 </div>
-<p>More spoilers – the goal of tidy evaluation is to help you, as a function-writer, be unambiguous about whether a function argument refers to a data frame or the calling environment. For example, in the code:</p>
+<p>More spoilers – the goal of tidy evaluation is to help you, as a function-writer, be unambiguous about whether a function argument refers to the data frame or to the calling environment. For example, in the code:</p>
 <pre class="r"><code>library(&quot;dplyr&quot;)
 
 mpg &lt;- 3
 
-mtcars %&gt;% 
-  select(mpg)</code></pre>
-<p>The <code>select()</code> function does not care that <code>mpg</code>is defined in the calling environment; it <em>knows</em> that <code>mpg</code> refers to <code>mtcars$mpg</code>.</p>
-<p>At rstudio::conf(2020), Lionel provided an update where he introduced some new syntax that makes Tideval a little bit easier. Preview: <em>embrace the argument</em>.</p>
+filter(mtcarts, mpg &gt; 20)</code></pre>
+<p>The <code>filter()</code> function does not care that <code>mpg</code>is defined in the calling environment; it <em>knows</em> that <code>mpg</code> refers to <code>mtcars$mpg</code>.</p>
+<p>At rstudio::conf(2020), Lionel introduced some new syntax that makes tide evaluation a little bit easier. Preview: <em>embrace the argument</em>.</p>
 <div class="vembedr" align="center">
 <div>
 <iframe src="https://www.youtube.com/embed/SW_TUkPXSmA" width="533" height="300" frameborder="0" allowfullscreen=""></iframe>
 </div>
 </div>
-<p>I think these videos provide an excellent introduction to tidy evaluation. If you want to read more, these references get into more detail on the Tidyverse team’s current thinking:</p>
+<p>I think these videos provide an excellent introduction to tidy evaluation; this tutorial is built around them.</p>
+<p>If you want to read more, these references get into more detail on the Tidyverse team’s current thinking:</p>
 <ul>
 <li><a href="http://dplyr.tidyverse.org/articles/programming.html">Programming with dplyr</a></li>
 <li><a href="https://ggplot2.tidyverse.org/articles/ggplot2-in-packages.html">Using ggplot2 in packages</a></li>
 <li><a href="https://adv-r.hadley.nz/metaprogramming.html">Metaprogramming chapter</a> from Hadley Wickham’s <a href="https://adv-r.hadley.nz">Advanced R</a></li>
 </ul>
-<p>In the first edition of this tutorial focused more on the theory and building-blocks of non-standard evaluation, particularly quosures - which I learned (<a href="https://mran.microsoft.com/snapshot/2017-12-11/web/packages/rlang/vignettes/tidy-evaluation.html">from an old vignette written by Hadley</a>) were <a href="https://github.com/wch/r-source/commit/a945ac8e6a82617205442d44a2be3a497d2ac896">invented by Luke Tierney</a> in 2000. I really am interested in these building-blocks; someday, I hope to write another tutorial where I can do justice to the topic.</p>
+<p>In the first edition of this tutorial focused more on the theory and building-blocks of non-standard evaluation, particularly quosures - which I learned (<a href="https://mran.microsoft.com/snapshot/2017-12-11/web/packages/rlang/vignettes/tidy-evaluation.html">from an old vignette written by Hadley</a>) were <a href="https://github.com/wch/r-source/commit/a945ac8e6a82617205442d44a2be3a497d2ac896">invented by Luke Tierney</a> in 2000. I find these building-blocks fascinating; someday, I hope to write another tutorial where I can do justice to the topic.</p>
 <p>In the mean time, I think the practical approach offered here will be more immediately-useful to more folks.</p>
 </div>
 <div id="section-introduction-first-edition-2018" class="section level3">
@@ -1400,7 +1400,7 @@ learnr:::store_exercise_cache(structure(list(global_setup = structure(c("library
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62]}},"value":[{"type":"character","attributes":{},"value":["assertthat","backports","base","bslib","checkmate","cli","compiler","crayon","curl","datasets","DBI","digest","dplyr","ellipsis","evaluate","fansi","fastmap","generics","glue","graphics","grDevices","htmltools","htmlwidgets","httpuv","httr","jquerylib","jsonlite","knitr","later","learnr","learnr.tidyeval","lifecycle","magrittr","markdown","methods","mime","pillar","pkgconfig","promises","purrr","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","stringi","stringr","tibble","tidyselect","tools","utf8","utils","vctrs","vembedr","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["0.2.1","1.2.1","4.1.0","0.3.0","2.0.0","3.0.1","4.1.0","1.4.1","4.3.2","4.1.0","1.1.1","0.6.28","1.0.7","0.3.2","0.14","0.5.0","1.1.0","0.1.0","1.4.2","4.1.0","4.1.0","0.5.2","1.5.4","1.6.3","1.4.2","0.1.4","1.7.2","1.34","1.3.0","0.10.1.9015","0.0.0.9000","1.0.1","2.0.1","1.1","4.1.0","0.11","1.6.2","2.0.3","1.2.0.1","0.3.4","2.5.1","1.0.7","0.4.11","2.11","2.0.2","0.13","0.4.0","1.7.0","4.1.0","1.7.4","1.4.0","3.1.4","1.1.1","4.1.0","1.2.2","4.1.0","0.3.8","0.1.4","2.4.2","0.26","1.8-4","2.2.1"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62]}},"value":[{"type":"character","attributes":{},"value":["assertthat","backports","base","bslib","checkmate","cli","compiler","crayon","curl","datasets","DBI","digest","dplyr","ellipsis","evaluate","fansi","fastmap","generics","glue","graphics","grDevices","htmltools","htmlwidgets","httpuv","httr","jquerylib","jsonlite","knitr","later","learnr","learnr.tidyeval","lifecycle","magrittr","markdown","methods","mime","pillar","pkgconfig","promises","purrr","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","stringi","stringr","tibble","tidyselect","tools","utf8","utils","vctrs","vembedr","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["0.2.1","1.2.1","4.1.0","0.3.0","2.0.0","3.0.1","4.1.0","1.4.1","4.3.2","4.1.0","1.1.1","0.6.28","1.0.7","0.3.2","0.14","0.5.0","1.1.0","0.1.0","1.4.2","4.1.0","4.1.0","0.5.2","1.5.4","1.6.3","1.4.2","0.1.4","1.7.2","1.34","1.3.0","0.10.1.9015","0.0.0.9000","1.0.1","2.0.1","1.1","4.1.0","0.11","1.6.3","2.0.3","1.2.0.1","0.3.4","2.5.1","1.0.7","0.4.11","2.11","2.0.2","0.13","0.4.0","1.7.0","4.1.0","1.7.4","1.4.0","3.1.4","1.1.1","4.1.0","1.2.2","4.1.0","0.3.8","0.1.4","2.4.2","0.26","1.8-4","2.2.1"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
